Colaboratory를 통해 생성됨

--- a/wk11_ML_basic_py17.ipynb
+++ b/wk11_ML_basic_py17.ipynb
@@ -2348,7 +2348,7 @@
       "metadata": {
         "id": "dVvHZ9uOIi18",
         "colab_type": "code",
-        "outputId": "8802a2e3-0901-4389-b232-578e3d6817e0",
+        "outputId": "4d15e19f-9aac-4e7e-f094-ecbeb0ffc4ed",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -2378,15 +2378,15 @@
         "  print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
         "      name=fn, length=len(uploaded[fn])))"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-b8bbc885-4045-451e-bec0-a9b3c4cc2132\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-b8bbc885-4045-451e-bec0-a9b3c4cc2132\">\n",
+              "     <input type=\"file\" id=\"files-69f3524c-861a-4dfb-8431-cf266c3abc7b\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-69f3524c-861a-4dfb-8431-cf266c3abc7b\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -2403,7 +2403,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving data-01-test-score.csv to data-01-test-score.csv\n",
+            "Saving data-01-test-score.csv to data-01-test-score (1).csv\n",
             "User uploaded file \"data-01-test-score.csv\" with length 325 bytes\n"
           ],
           "name": "stdout"
@@ -2414,7 +2414,7 @@
       "metadata": {
         "id": "M71z8IriGPUL",
         "colab_type": "code",
-        "outputId": "ba57db95-c3b2-496b-f6b6-2750a4ce20a9",
+        "outputId": "f213c25b-3f9c-4fd5-e18f-0576fd7195e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 467
@@ -2426,7 +2426,7 @@
         "data = np.loadtxt('./data-01-test-score.csv', delimiter=',', dtype=np.float32)\n",
         "data"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2462,7 +2462,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 9
         }
       ]
     },
@@ -2805,41 +2805,13 @@
       "cell_type": "code",
       "source": [
         "# 데이터 구성\n",
-        "import numpy as np\n",
-        "\n",
-        "np.random.seed(9)\n",
-        "data = np.linspace(0, 100, 25, dtype=np.int)\n",
-        "\n",
-        "def f(X):\n",
-        "  return np.sin(2*np.pi*X)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "gEBNh7riVmkK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "X = np.random.uniform(0, 1, size=25)[:, np.newaxis]\n",
-        "y = f(X)+np.random.normal(scale=0.3, size=25)[:, np.newaxis]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "AMbpN0GDV0zP",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "X_test, X_train, y_test, y_train = train_test_split(X, y, test_size=0.8)"
+        "# LinearRegression\n",
+        "# from sklearn.linear_model import LinearRegression\n",
+        "# 25명 중 20명의 데이터를 훈련 데이터, 나머지 5명을  테스트 데이터로 지정한다.\n",
+        "X_train = data[0:-5, 0:-1]\n",
+        "y_train = data[0:-5,[-1]]\n",
+        "X_test = data[-5:, 0:-1]\n",
+        "y_test = data[-5:,[-1]]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2848,7 +2820,7 @@
       "metadata": {
         "id": "3lYo50i1GPUd",
         "colab_type": "code",
-        "outputId": "ef2f963c-86f8-4eb4-e473-907c12797be1",
+        "outputId": "b9ab0099-c9fa-4697-ff2b-c20bf84afdca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -2858,66 +2830,19 @@
       "source": [
         "X_train.shape, y_train.shape, X_test.shape, y_test.shape"
       ],
-      "execution_count": 78,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((20, 1), (20, 1), (5, 1), (5, 1))"
+              "((20, 3), (20, 1), (5, 3), (5, 1))"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "cbLxI9k3xV63",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "data1 = data.reshape(5, 5)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "W9F_w5uBntIS",
-        "colab_type": "code",
-        "outputId": "afa3a1a9-becc-49ce-8fd3-26f0d9f271cb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 107
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "data1"
-      ],
-      "execution_count": 80,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[  0,   4,   8,  12,  16],\n",
-              "       [ 20,  25,  29,  33,  37],\n",
-              "       [ 41,  45,  50,  54,  58],\n",
-              "       [ 62,  66,  70,  75,  79],\n",
-              "       [ 83,  87,  91,  95, 100]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 80
+          "execution_count": 11
         }
       ]
     },
@@ -2935,7 +2860,7 @@
       "metadata": {
         "id": "syFlWBYBGPUd",
         "colab_type": "code",
-        "outputId": "fb41a922-588e-4351-8874-1998bb6e7a73",
+        "outputId": "31529df7-e0a0-418a-d0d1-0c5882e2784f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -2946,14 +2871,11 @@
         "# 20명의 트레인 데이터 이용\n",
         "# 선형 회기 모델 만들기\n",
         "from sklearn.linear_model import LinearRegression\n",
-        "data_X = data1[:, 0:-1]\n",
-        "data_y = data1[:,[-1]]\n",
-        "X_train = data_X\n",
-        "y_train = data_y\n",
-        "lr_model = LinearRegression().fit(X_train, y_train)\n",
-        "lr_model"
+        "lr_model_20 = LinearRegression().fit(X_train, y_train)\n",
+        "\n",
+        "lr_model_20\n"
       ],
-      "execution_count": 81,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2965,7 +2887,39 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "AqJFfgjRK8Hn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "ee220d4a-3bcc-47ab-deb6-bfbacf3a7a48"
+      },
+      "cell_type": "code",
+      "source": [
+        "# 선형회기 결과 -> 3개 특성(영역별 점수) 계수 및 y-절편(bias)\n",
+        "lr_model_20.coef_,lr_model_20.intercept_"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[0.4355938, 0.5249363, 1.0842971]], dtype=float32),\n",
+              " array([-2.8510742], dtype=float32))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
         }
       ]
     },
@@ -2981,40 +2935,9 @@
     },
     {
       "metadata": {
-        "id": "RfJ7NsDd5TXK",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "outputId": "ad1a3373-670a-4691-990f-455fab1ae38a"
-      },
-      "cell_type": "code",
-      "source": [
-        "lr_model.coef_,lr_model.intercept_"
-      ],
-      "execution_count": 100,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(array([[0.25301205, 0.25301205, 0.25301205, 0.25301205]]),\n",
-              " array([9.92771084]))"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 100
-        }
-      ]
-    },
-    {
-      "metadata": {
         "id": "dDgADSmIGPUf",
         "colab_type": "code",
-        "outputId": "ad14a022-8813-48f9-faf5-010c784b814b",
+        "outputId": "f0be8527-4864-4dec-e326-4c951b5fa977",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -3023,19 +2946,18 @@
       "cell_type": "code",
       "source": [
         "# 테스트 데이터에 대한 예측과 정확도 평가\n",
-        "lr_model.coef_,lr_model.intercept_\n",
-        "test1 = np.array([11, 97, 81, 50])\n",
-        "lr_model.predict(test1.reshape(1, -1))\n",
-        "print(\"트레인 세트의 정확도: {:.2f}\".format(lr_model.score(X_train, y_train)))\n",
-        "\n",
-        "\n"
+        "# 가상적인 3개 영역 점수로 수능 점수 예측\n",
+        "test = np.array([100, 98, 81]) # 가상 점수 입력\n",
+        "lr_model_20.predict(test.reshape(1,-1))\n",
+        "# 수능 점수에 대한 선형 회기 모델의 정확도\n",
+        "print(\"테스트 세트의 정확도: {:.2f}\".format(lr_model_20.score(X_test, y_test)))"
       ],
-      "execution_count": 111,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "트레인 세트의 정확도: 1.00\n"
+            "테스트 세트의 정확도: 0.92\n"
           ],
           "name": "stdout"
         }
